# clipshare

./: .gitignore  README.adoc  main.py  pyproject.toml
static/: index.html
