[tool.poetry]
name = "clipshare"
version = "0.1.0"
description = "Self-hosted website to share your clipboard"
authors = ["Julius Dehner <julius.dehner@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.62.0"}
aiofiles = "0.5.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
